--- a/nuxt/front/package.json
+++ b/nuxt/front/package.json
@@ -12,8 +12,16 @@
     "@nuxtjs/auth-next": "^5.0.0-1624817847.21691f1",
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/composition-api": "^0.26.0",
+    "@nuxtjs/markdownit": "^2.0.0",
     "@nuxtjs/style-resources": "^1.2.1",
     "core-js": "^3.15.1",
+    "markdown-it-anchor": "^8.1.2",
+    "markdown-it-highlightjs": "^3.5.0",
+    "markdown-it-katex": "^2.0.3",
+    "markdown-it-link-attributes": "^3.0.0",
+    "markdown-it-mark": "^3.0.1",
+    "markdown-it-table-of-contents": "^0.5.2",
+    "markdown-it-video": "^0.6.3",
     "mavon-editor": "^2.9.1",
     "nuxt": "^2.15.7",
     "sass": "^1.37.5",
