--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3"
 
 services:
     db:
-        image: postgres:latest
+        image: postgres:13
         restart: always
         container_name: postgres
         environment:
